--- a/src/main/webapp/css/general.css
+++ b/src/main/webapp/css/general.css
@@ -1,3 +1,15 @@
 main.container {
-    margin-top: 4em;
+    margin-top: 5em;
+}
+
+.info-so {
+    margin-bottom: 4em;
+}
+
+#fullPercent {
+    padding-left: 5px;
+}
+
+#infoSO {
+    font-size: 1.1em;
 }
